add linux target

--- a/.cargo/config
+++ b/.cargo/config
@@ -2,3 +2,8 @@
 rustflags = [
     "-C", "link-arg=-L/opt/CANARY/lib",
 ]
+
+[target.x86_64-unknown-linux-gnu]
+rustflags = [
+    "-C", "link-arg=-L/opt/CANARY/lib",
+]
